--- a/resources/assets/scss/app.scss
+++ b/resources/assets/scss/app.scss
@@ -34,6 +34,7 @@
 @import "components/main-page";
 @import "components/subpages";
 @import "components/sliders";
+@import "components/checkbox";
 @import "pages/pages-section";
 @import "pages/dashboard";
 @import "components/tabs-section";
