--- a/resources/assets/scss/components/_button.scss
+++ b/resources/assets/scss/components/_button.scss
@@ -70,6 +70,15 @@
             margin-right: 10px;
         }
     }
+    &--forgot {
+        border: 0;
+        outline: none;
+        color: $color-secondary;
+        text-align: right;
+        padding: 0;
+        margin-top: 15px;
+        font-weight: 600;
+    }
 }
 
 #loadMore {
