replace new resources page

--- a/resources/assets/scss/components/_main-page.scss
+++ b/resources/assets/scss/components/_main-page.scss
@@ -900,6 +900,10 @@
                     text-transform: uppercase;
                     font-weight: bold;
                 }
+                a {
+                    text-decoration: none;
+                    color: $color-secondary;
+                }
             }
         }
         &__col-2 {
