--- a/public/css/app.css
+++ b/public/css/app.css
@@ -20340,6 +20340,10 @@ ul.bullet-style--uppercase li strong {
   text-transform: uppercase;
   font-weight: bold;
 }
+ul.bullet-style--uppercase li a {
+  text-decoration: none;
+  color: #ab1a2d;
+}
 ul.bullet-style__col-2 li {
   width: calc(95%/2);
 }
