--- a/resources/assets/scss/pages/_pages-section.scss
+++ b/resources/assets/scss/pages/_pages-section.scss
@@ -33,6 +33,11 @@
             }
         }
     }
+    &--resources-american-report {
+        main.main-content {
+            padding: 50px 0;
+        }
+    }
 }
 
 .page {
