--- a/resources/assets/scss/pages/_pages-section.scss
+++ b/resources/assets/scss/pages/_pages-section.scss
@@ -38,6 +38,15 @@
             padding: 50px 0;
         }
     }
+    header {
+        .main-nagivation-desktop {
+            .logo {
+                display: inline-block;
+                margin-top: 10px;
+                width: 130px;
+            }
+        }
+    }
 }
 
 .page {
