top submenu added link

--- a/resources/assets/scss/components/_header.scss
+++ b/resources/assets/scss/components/_header.scss
@@ -142,6 +142,7 @@ header {
         display: block;
         text-align: right;
         padding: 0 0;
+        z-index: 22;
         &::after {
             content: '';
             display: block;
