--- a/resources/assets/scss/components/_header.scss
+++ b/resources/assets/scss/components/_header.scss
@@ -256,6 +256,14 @@ header {
                         background: url('../images/sprite.png') no-repeat;
                         background-position: -141px -10px;
                     }
+                    &.ic-chapter {
+                        display: inline-block;
+                        vertical-align: top;
+                        width: 40px;
+                        height: 24px;
+                        background: url('../images/sprite.png') no-repeat;
+                        background-position: -271px -5px;
+                    }
                 }
             }
         }
