--- a/resources/assets/scss/components/_banner.scss
+++ b/resources/assets/scss/components/_banner.scss
@@ -281,7 +281,8 @@ $banner-background-color:#000;
             display: none;
         }
         .banner-content-desc {
-            top:99px !important h3 {
+            top: 99px !important;
+            h3 {
                 font-size: 3.5rem !important;
                 font-weight: 800;
                 max-width: 85%;
