--- a/resources/assets/scss/pages/_pages-section.scss
+++ b/resources/assets/scss/pages/_pages-section.scss
@@ -47,6 +47,11 @@
             }
         }
     }
+    .footer__item {
+        .footer-contacts {
+            margin-top: 40px !important;
+        }
+    }
 }
 
 .page {
