--- a/resources/assets/scss/components/_chapter-elements.scss
+++ b/resources/assets/scss/components/_chapter-elements.scss
@@ -206,6 +206,15 @@
             overflow: hidden;
             text-indent: -999px;
             outline: none;
+            &.active {
+                background-position: -457px -321px;
+                opacity: 0;
+                visibility: hidden;
+                &:hover {
+                    opacity: 1;
+                    visibility: visible;
+                }
+            }
         }
     }
 }
