css update on video html

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22559,17 +22559,20 @@ section.page--login .site-content {
   border: 0;
   width: 77px;
   height: 77px;
+  background-position: -457px -321px;
   background-position: -456px -235px;
   overflow: hidden;
   text-indent: -999px;
   outline: none;
-}
-.html-video__button button.active {
-  background-position: -457px -321px;
   opacity: 0;
   visibility: hidden;
 }
-.html-video__button button.active:hover {
+.html-video__button button.active {
+  background-position: -456px -235px;
+  opacity: 1;
+  visibility: visible;
+}
+.html-video__button button:hover {
   opacity: 1;
   visibility: visible;
 }
