--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22572,7 +22572,7 @@ section.page--login .site-content {
   opacity: 1;
   visibility: visible;
 }
-.html-video__button button:hover {
+.html-video__button:hover button {
   opacity: 1;
   visibility: visible;
 }
