--- a/resources/assets/scss/components/_chapter-elements.scss
+++ b/resources/assets/scss/components/_chapter-elements.scss
@@ -214,7 +214,9 @@
                 opacity: 1;
                 visibility: visible;
             }
-            &:hover {
+        }
+        &:hover {
+            button {
                 opacity: 1;
                 visibility: visible;
             }
