--- a/resources/assets/scss/pages/_pages-section.scss
+++ b/resources/assets/scss/pages/_pages-section.scss
@@ -55,6 +55,23 @@
     .main-content {
         padding: 80px 0;
     }
+    &--detail {
+        .sub-banner__image {
+            width: 400px;
+            height: 400px;
+            position: absolute;
+            z-index: 6;
+            border-radius: 100%;
+            right: 10%;
+        }
+        .sub-banner__wrapper:before {
+            display: none;
+        }
+        .sub-banner:before {
+            left: inherit;
+            right: 10%;
+        }
+    }
 }
 
 .page {
