remove background color on sponsor section on the main page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21567,6 +21567,10 @@ section.page--login .site-content {
   padding: 60px 0;
 }
 
+.homepage--main .sponsors {
+  background: transparent;
+}
+
 .dashboard-navigation {
   background: #303132;
 }
