--- a/resources/assets/scss/pages/_pages-section.scss
+++ b/resources/assets/scss/pages/_pages-section.scss
@@ -81,3 +81,11 @@
         }
     }
 }
+
+.homepage {
+    &--main {
+        .sponsors {
+            background: transparent;
+        }
+    }
+}
