added margin on sponsor page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21235,6 +21235,10 @@ ul.bullet-style li h6 {
   margin-bottom: 100px;
 }
 
+.margin--m100 {
+  margin: 100px 0;
+}
+
 section.page {
   overflow: hidden;
 }
