--- a/resources/assets/scss/components/_main-page.scss
+++ b/resources/assets/scss/components/_main-page.scss
@@ -302,23 +302,26 @@
                 height: 100%;
                 position: absolute;
                 top: 0;
+                left: 0;
                 z-index: 1;
                 background: url("../images/partnership-bg.png") no-repeat;
-                background-size: cover;
+                background-size: 100% 100%;
             }
             .title {
                 position: relative;
                 display: block;
-                padding: 176px 0 0;
+                // padding: 176px 0 0;
                 color: $color-white;
                 z-index: 2;
+                margin-top: 20%;
                 h2 {
                     color: $color-white;
-                    margin-bottom: 30px;
+                    // margin-bottom: 30px;
                 }
                 p {
                     font: 400 30px $font-primary;
-                    font-size: 1.5em;
+                    // font-size: 1.5em;
+                    font-size: 1em;
                 }
             }
             .partnership-level {
@@ -327,6 +330,19 @@
                 padding-top: 168px;
                 margin-left: 50px;
                 z-index: 2;
+                &__adjustment {
+                    padding-top: 0;
+                    margin-left: 0;
+                    margin-top: 20px;
+                    color: $color-white;
+                    margin-bottom: 15% !important;
+                    .content-txt {
+                        color: $color-white;
+                    }
+                    h3 {
+                        color: $color-white !important;
+                    }
+                }
                 &--item {
                     display: block;
                     // margin-bottom: 21px;
@@ -1805,5 +1821,299 @@
     .margin {
         &-m100 {
             margin: 100px 0;
+        }
+    }
+    
+    .big-advertisement {
+        position: relative;
+        z-index: 2;
+        width: 450px;
+        max-width: 450px;
+        height: 420px;
+        margin: auto;
+        &__slick {
+            .slick-prev:hover,
+            .slick-prev:focus,
+            .slick-next:hover,
+            .slick-next:focus {
+                opacity: 0.8;
+            }
+            .slick-prev {
+                background: url('../images/sprite.png') no-repeat;
+                background-position: -53px -46px;
+                width: 29px;
+                height: 24px;
+                font-size: 0;
+                border: none;
+                position: absolute;
+                top: inherit;
+                left: 25%;
+                bottom: -10% !important;
+                cursor: pointer;
+                z-index: 9;
+                opacity: .4;
+                &:hover {
+                    opacity: 1;
+                }
+                &::before {
+                    display: none;
+                }
+            }
+            .slick-next {
+                background: url('../images/sprite.png') no-repeat;
+                background-position: -11px -46px;
+                width: 29px;
+                height: 24px;
+                font-size: 0;
+                border: none;
+                position: absolute;
+                top: inherit;
+                right: 25%;
+                bottom: -10% !important;
+                cursor: pointer;
+                z-index: 9;
+                opacity: .4;
+                &:hover {
+                    opacity: 1;
+                }
+                &::before {
+                    display: none;
+                }
+            }
+            /* Slick Dots */
+            .slick-dots {
+                position: absolute;
+                bottom: -25px;
+                left: 0;
+                right: 0;
+                display: block;
+                width: 100%;
+                padding: 0;
+                list-style: none;
+                text-align: center;
+            }
+            .slick-dots li {
+                position: relative;
+                display: inline-block;
+                width: 10px;
+                height: 10px;
+                margin: 0 10px;
+                padding: 0;
+                cursor: pointer;
+                -webkit-border-radius: 100%;
+                -moz-border-radius: 100%;
+                border-radius: 100%;
+            }
+            .slick-dots li button {
+                background: transparent;
+                width: 10px;
+                height: 10px;
+                border: none;
+                font-size: 0;
+                line-height: 0;
+                display: inline-block;
+                cursor: pointer;
+                outline: none;
+                position: relative;
+                -webkit-border-radius: 100%;
+                -moz-border-radius: 100%;
+                border-radius: 100%;
+            }
+            .slick-dots li button::before {
+                font-family: slick;
+                font-size: 6px;
+                line-height: 20px;
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 10px;
+                height: 10px;
+                opacity: 1;
+                background: #b6b7b7;
+                text-align: center;
+                content: '';
+                display: block;
+                -webkit-font-smoothing: antialiased;
+                -webkit-border-radius: 100%;
+                -moz-border-radius: 100%;
+                border-radius: 100%;
+            }
+            .slick-dots li.slick-active button {
+                width: 22px;
+                height: 22px;
+            }
+            .slick-dots li.slick-active button:before {
+                background: #000000;
+                width: 10px;
+                height: 10px;
+                -webkit-border-radius: 100%;
+                -moz-border-radius: 100%;
+                border-radius: 100%;
+            }
+            .slick-dots li.slick-active button:after {
+                content: '';
+                position: relative;
+                top: -11px;
+                left: -11px;
+                right: 0;
+                display: block;
+                border: 1px solid #000000;
+                width: 22px;
+                height: 22px;
+                -webkit-border-radius: 100%;
+                -moz-border-radius: 100%;
+                border-radius: 100%;
+            }
+        }
+    }
+    
+    .small-advertisement {
+        position: relative;
+        z-index: 2;
+        width: 280px;
+        max-width: 280px;
+        height: 280px;
+        &__slick {
+            .slick-prev:hover,
+            .slick-prev:focus,
+            .slick-next:hover,
+            .slick-next:focus {
+                opacity: 0.8;
+            }
+            .slick-prev {
+                background: url('../images/sprite.png') no-repeat;
+                background-position: -53px -46px;
+                width: 29px;
+                height: 24px;
+                font-size: 0;
+                border: none;
+                position: absolute;
+                top: inherit;
+                left: 25%;
+                bottom: -10% !important;
+                cursor: pointer;
+                z-index: 9;
+                opacity: .4;
+                &:hover {
+                    opacity: 1;
+                }
+                &::before {
+                    display: none;
+                }
+            }
+            .slick-next {
+                background: url('../images/sprite.png') no-repeat;
+                background-position: -11px -46px;
+                width: 29px;
+                height: 24px;
+                font-size: 0;
+                border: none;
+                position: absolute;
+                top: inherit;
+                right: 25%;
+                bottom: -10% !important;
+                cursor: pointer;
+                z-index: 9;
+                opacity: .4;
+                &:hover {
+                    opacity: 1;
+                }
+                &::before {
+                    display: none;
+                }
+            }
+            /* Slick Dots */
+            .slick-dots {
+                position: absolute;
+                bottom: -25px;
+                left: 0;
+                right: 0;
+                display: block;
+                width: 100%;
+                padding: 0;
+                list-style: none;
+                text-align: center;
+            }
+            .slick-dots li {
+                position: relative;
+                display: inline-block;
+                width: 10px;
+                height: 10px;
+                margin: 0 10px;
+                padding: 0;
+                cursor: pointer;
+                -webkit-border-radius: 100%;
+                -moz-border-radius: 100%;
+                border-radius: 100%;
+            }
+            .slick-dots li button {
+                background: transparent;
+                width: 10px;
+                height: 10px;
+                border: none;
+                font-size: 0;
+                line-height: 0;
+                display: inline-block;
+                cursor: pointer;
+                outline: none;
+                position: relative;
+                -webkit-border-radius: 100%;
+                -moz-border-radius: 100%;
+                border-radius: 100%;
+            }
+            .slick-dots li button::before {
+                font-family: slick;
+                font-size: 6px;
+                line-height: 20px;
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 10px;
+                height: 10px;
+                opacity: 1;
+                background: #b6b7b7;
+                text-align: center;
+                content: '';
+                display: block;
+                -webkit-font-smoothing: antialiased;
+                -webkit-border-radius: 100%;
+                -moz-border-radius: 100%;
+                border-radius: 100%;
+            }
+            .slick-dots li.slick-active button {
+                width: 22px;
+                height: 22px;
+            }
+            .slick-dots li.slick-active button:before {
+                background: #000000;
+                width: 10px;
+                height: 10px;
+                -webkit-border-radius: 100%;
+                -moz-border-radius: 100%;
+                border-radius: 100%;
+            }
+            .slick-dots li.slick-active button:after {
+                content: '';
+                position: relative;
+                top: -11px;
+                left: -11px;
+                right: 0;
+                display: block;
+                border: 1px solid #000000;
+                width: 22px;
+                height: 22px;
+                -webkit-border-radius: 100%;
+                -moz-border-radius: 100%;
+                border-radius: 100%;
+            }
+        }
+    }
+    
+    .partnership {
+        &__left {
+            padding-left: 10%;
+        }
+        .container-max {
+            max-width: 100%;
         }
     }
